# serde_tar

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/ser/: mod.rs
tests/: test.rs
