[package]
name = "serde_tar"
version = "0.1.0"
authors = ["Jean Collonvillé <jcollonville@kertel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"