[package]
name = "serde_tar"
version = "0.1.1"
authors = ["Jean Collonvillé <jcollonville@resosafe.fr>"]
edition = "2018"
description = "tar based serializer for Serde"
license = "MIT"
repository = "https://github.com/resosafe/serde_tar"

[dependencies]
log = "0.4"
serde = "1.0"
tar = "0.4"


[dev-dependencies]
serde_derive = "1.0"
